added team members page/table

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -34,7 +34,7 @@
     margin-bottom: 10px;
 }
 
-.sidebarItem.active, sidebarItem:hover{
+.sidebarItem.active, .sidebarItem:hover{
     background-color: rgb(57,80,108);
 
 }
