--- a/src/components/charts/enrollmentChart.css
+++ b/src/components/charts/enrollmentChart.css
@@ -1,6 +1,8 @@
 .teamCharts{
     margin: 20px;
+    margin-top: 30px;
     padding: 20px;
+    background-color: rgb(250, 250, 250);
     box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
     -webkit-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
     -moz-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
@@ -11,15 +13,19 @@
 
 .charts{
     flex-basis: 50%;
-    background-color: rgb(248, 248, 248);
     padding: 20px;
     border-radius: 10px;
+    background-color: white;
+    box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
+    -webkit-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
+    -moz-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
 }
 
 .chartTitleEnrollments{
     margin-bottom: 20px;
     font-size: 30px;
     color: rgb(57,80,108);
+    font-weight: 600;
     text-align: center;
     margin-top: 20px;
 }
@@ -28,6 +34,7 @@
     margin-bottom: 20px;
     font-size: 30px;
     color: rgb(57,80,108);
+    font-weight: 600;
     text-align: center;
     margin-top: 40px;
 }
