--- a/src/components/featuredInfo/featured.css
+++ b/src/components/featuredInfo/featured.css
@@ -5,16 +5,7 @@
     margin-top: 10px;
 }
 
-.featuredItem{
-    flex: 1;
-    margin: 0px 20px;
-    padding: 30px;
-    border-radius: 10px;
-    cursor: pointer;
-    box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
-    -webkit-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
-    -moz-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
-}
+
 
 .featuredTitle{
     font-size: 22px;
@@ -68,9 +59,39 @@
 }
 
 .month{
-    font-size: 48px;
-    font-weight: 600;
-    color: #555;
-    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    color: rgb(57,80,108);
+    text-align: right;
+    margin-right: 40px;
     margin-top: 0px;
+}
+
+.progressBar{
+    height: 120px;
+    width: 120px;
+    text-align: center;
+    margin-left: 40px;
+    margin-bottom: 50px;
+
+}
+
+.progressTitle{
+    margin-bottom: 10px;
+    color: rgb(57,80,108);
+}
+
+.enrollmentDiv,
+.spendingDiv,
+.msgDiv{
+        display: flex;
+        flex: 1;
+        justify-content: space-around;
+        margin: 0px 20px;
+        padding: 30px;
+        border-radius: 10px;
+        cursor: pointer;
+        box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
+        -webkit-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
+        -moz-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
 }
