--- a/src/components/charts/enrollmentChart.css
+++ b/src/components/charts/enrollmentChart.css
@@ -14,6 +14,7 @@
 .charts{
     flex-basis: 50%;
     padding: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
     background-color: white;
     box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
