--- a/src/components/featuredInfo/featured.css
+++ b/src/components/featuredInfo/featured.css
@@ -37,7 +37,7 @@
     margin-left: 20px;
     align-items: center;
     font-size: 20px;
-    color: darkgreen;
+    color: red;
 }
 
 .featuredMSGRate{
@@ -45,7 +45,7 @@
     margin-left: 20px;
     align-items: center;
     font-size: 20px;
-    color: darkgreen;
+    color: red;
 }
 
 .icon{
@@ -62,7 +62,7 @@
     font-size: 40px;
     font-weight: bold;
     color: rgb(57,80,108);
-    text-align: right;
+    text-align: center;
     margin-right: 40px;
     margin-top: 0px;
 }
@@ -94,4 +94,9 @@
         box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
         -webkit-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
         -moz-box-shadow: 5px 11px 29px 0px rgba(0,0,0,0.66);
+}
+
+.medal{
+    width: 120px;
+    height: 120px;
 }
