added media query for nav header

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -46,3 +46,12 @@
     top: 20px;
     margin-right: 10px;
 }
+
+@media screen and (max-width: 545px){
+    .pageTitle{
+        font-size: 30px;
+    }
+    .logo{
+        display: none;
+    }
+}
